fixed overflow of the wave decoration

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ html {
 .content {
     width: 80%;
     padding: 0 1em 7em;
+    overflow: hidden;
 }
 
 h2 {
@@ -530,9 +531,10 @@ h2 i {
 
 .wave-pink {
     fill: #e9b49b;
+    overflow: hidden;
 }
 
 .wave-purple {
     fill: #46445B;
-
+    overflow: hidden;
 }
